# chat-bot-api

./: .gitignore  main.py  pyproject.toml
app/: api_config.py
app/auth/: auth_handler.py  security.py
app/auth/fastapi_auth_middlewares/: auth_middleware.py
app/cruds/: doc_cruds.py
app/models/: __init__.py  doc_model.py
app/routes/: __init__.py  auth_router.py  manage_router.py
app/utils/: __init__.py  custom_cors_middleware.py  database.py
tests/: test.py
